--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.10.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
+    "ms": "^2.1.3",
     "msql": "^1.0.3",
     "uuid": "^9.0.0"
   },
